--- a/index.html
+++ b/index.html
@@ -1,1 +1,87 @@
-<h1>Lheb Store Website</h1>
+<!doctype html>
+<html lang="ar" dir="rtl">
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>لهيب ستور — المتجر الرقمي</title>
+  <meta name="description" content="لهيب ستور — اشتراكات سناب بلس، نتفليكس، شاهد والمزيد" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@300;400;600;700;900&display=swap" rel="stylesheet">
+  <style>
+    :root{--bg:#0b0b0c;--card:#111215;--muted:#bfc6cb;--accent:#ffffff;--accent-2:#c7c9cc;--glass: rgba(255,255,255,0.03)}
+    *{box-sizing:border-box;font-family:'Cairo',system-ui,Arial,sans-serif}
+    html,body{height:100%;margin:0;background:linear-gradient(180deg,#070708 0%,#0b0b0c 100%);color:var(--accent);direction:rtl}
+    a{color:var(--accent);text-decoration:none}
+    .container{max-width:1100px;margin:28px auto;padding:20px}
+
+    header{display:flex;align-items:center;justify-content:space-between;gap:16px}
+    .brand{display:flex;align-items:center;gap:14px}
+    .logo{width:64px;height:64px;border-radius:12px;display:grid;place-items:center;background:linear-gradient(180deg,#1b1b1d,#2b2b2e);box-shadow:0 8px 30px rgba(0,0,0,0.6)}
+    .logo img{width:46px;height:46px;object-fit:contain}
+    h1{margin:0;font-size:20px}
+    p.lead{margin:0;color:var(--muted)}
+
+    nav{display:flex;gap:10px;align-items:center}
+    .btn{background:transparent;border:1px solid rgba(255,255,255,0.06);padding:8px 12px;border-radius:10px;color:var(--accent);cursor:pointer}
+    .btn.primary{background:#fff;color:#0b0b0c;font-weight:700}
+
+    .hero{display:grid;grid-template-columns:1fr 380px;gap:20px;margin-top:18px;align-items:start}
+    .card{background:linear-gradient(180deg,rgba(255,255,255,0.02),rgba(255,255,255,0.01));padding:18px;border-radius:14px;box-shadow:0 8px 30px rgba(2,6,23,0.6)}
+
+    .hero-left h2{margin:0 0 8px 0;font-size:26px}
+    .hero-left p{color:var(--muted);margin:8px 0 0 0}
+
+    .features{display:grid;grid-template-columns:repeat(3,1fr);gap:12px;margin-top:18px}
+    .feature{background:var(--card);padding:12px;border-radius:12px;text-align:center}
+    .feature svg{width:36px;height:36px;margin-bottom:8px}
+
+    .packages{display:grid;grid-template-columns:repeat(auto-fit,minmax(220px,1fr));gap:14px;margin-top:18px}
+    .pkg{padding:14px;border-radius:12px;background:linear-gradient(180deg,rgba(255,255,255,0.01),rgba(255,255,255,0.02));position:relative}
+    .pkg .title{font-weight:800}
+    .pkg ul{margin:8px 0 0 0;padding:0 0 0 18px;color:var(--muted)}
+    .cta{display:inline-block;margin-top:10px;padding:10px 12px;border-radius:10px;background:#fff;color:#07101a;text-decoration:none;font-weight:700}
+
+    .right-panel{position:sticky;top:22px}
+    .contact-card a{display:block;padding:10px 12px;border-radius:10px;background:rgba(255,255,255,0.02);text-decoration:none;color:var(--muted);margin-bottom:8px}
+
+    footer{margin-top:28px;color:var(--muted);font-size:13px;text-align:center;padding:18px}
+
+    .faq details{background:rgba(255,255,255,0.02);padding:10px;border-radius:8px;margin-bottom:8px}
+    .socials{display:flex;gap:8px}
+
+    @media(max-width:960px){.hero{grid-template-columns:1fr}.features{grid-template-columns:repeat(2,1fr)}.right-panel{position:static;margin-top:12px}}
+    @media(max-width:560px){.features{grid-template-columns:1fr}}
+
+    .fade-up{transform:translateY(8px);opacity:0;animation:fadeUp .6s ease forwards}
+    @keyframes fadeUp{to{transform:none;opacity:1}}
+
+    input,textarea,select{background:rgba(255,255,255,0.02);border:1px solid rgba(255,255,255,0.04);color:var(--accent);padding:10px;border-radius:8px;width:100%}
+    label{font-size:13px;color:var(--muted)}
+
+  </style>
+</head>
+<body>
+  <div class="container">
+    <header>
+      <div class="brand">
+        <div class="logo" aria-hidden>
+          <img src="logo.png" alt="لهيب ستور لوقو" />
+        </div>
+        <div>
+          <h1>لهيب ستور</h1>
+          <p class="lead">اشتراكات رقمية — سناب بلس، نتفليكس، شاهد والمزيد</p>
+        </div>
+      </div>
+      <nav>
+        <button class="btn">الباقات</button>
+        <button class="btn">تواصل</button>
+        <a class="btn primary" href="#">اطلب الآن</a>
+      </nav>
+    </header>
+
+    <footer>
+      © <span id="year"></span> لهيب ستور — جميع الحقوق محفوظة
+    </footer>
+  </div>
+</body>
+</html>
