--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
       <nav>
         <button class="btn">الباقات</button>
         <button class="btn">تواصل</button>
-        <a class="btn primary" href="#">اطلب الآن</a>
+        <a class="btn primary" href="#">قريبا</a>
       </nav>
     </header>
 
