--- a/index.html
+++ b/index.html
@@ -69,13 +69,13 @@
         </div>
         <div>
           <h1>لهيب ستور</h1>
-          <p class="lead">اشتراكات رقمية — سناب بلس، نتفليكس، شاهد والمزيد</p>
+          <p class="lead">خيارك الامثل لإختيار مُنتجاتك الرقمية " سناب شات بلس، نتفلكس، شاهد والمزيد"</p>
         </div>
       </div>
       <nav>
         <button class="btn">الباقات</button>
         <button class="btn">تواصل</button>
-        <a class="btn primary" href="#">قريبا</a>
+        <a class="btn primary" href="#">إنتظرونا قريباً</a>
       </nav>
     </header>
 
