Change logo image from logo.png to logo.jpg

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
     <header>
       <div class="brand">
         <div class="logo" aria-hidden>
-          <img src="logo.png" alt="لهيب ستور لوقو" />
+          <img src="logo.jpg" alt="لهيب ستور لوقو" />
         </div>
         <div>
           <h1>لهيب ستور</h1>
