--- a/index.html
+++ b/index.html
@@ -17,11 +17,17 @@
     header{display:flex;align-items:center;justify-content:space-between;gap:16px}
     .brand{display:flex;align-items:center;gap:14px}
     .logo{width:64px;height:64px;border-radius:12px;display:grid;place-items:center;background:linear-gradient(180deg,#1b1b1d,#2b2b2e);box-shadow:0 8px 30px rgba(0,0,0,0.6)}
-    ..logo img {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;   /* يخلي الصورة تغطي المربع بالكامل */
-  border-radius: 12px; /* نفس انحناء المربع */
+    ..logo {
+    width: 64px;
+    height: 64px;
+    border-radius: 12px;
+    overflow: hidden; /* مهم جداً */
+}
+
+.logo img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover; /* يجعل الصورة تغطي المربع بالكامل */
 }
     h1{margin:0;font-size:20px}
     p.lead{margin:0;color:var(--muted)}
