Update lead paragraph in index.html
Removed extra text from the lead paragraph.

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
         </div>
         <div>
           <h1>لهيب ستور</h1>
-          <p class="lead">خيارك الامثل لإختيار مُنتجاتك الرقمية " سناب شات بلس، نتفلكس، شاهد والمزيد"</p>
+          <p class="lead">خيارك الامثل لإختيار مُنتجاتك الرقمية</p>
         </div>
       </div>
       <nav>
