--- a/index.html
+++ b/index.html
@@ -60,7 +60,21 @@
     .faq details{background:rgba(255,255,255,0.02);padding:10px;border-radius:8px;margin-bottom:8px}
     .socials{display:flex;gap:8px}
 
-    @media(max-width:960px){.hero{grid-template-columns:1fr}.features{grid-template-columns:repeat(2,1fr)}.right-panel{position:static;margin-top:12px}}
+   /* === Force desktop layout on all screens === */
+.hero {
+  display: grid;
+  grid-template-columns: 1fr 380px;
+  gap: 20px;
+}
+
+.container {
+  overflow-x: auto;
+  -webkit-overflow-scrolling: touch;
+}
+
+html, body {
+  min-width: 420px;
+}
     @media(max-width:560px){.features{grid-template-columns:1fr}}
 
     .fade-up{transform:translateY(8px);opacity:0;animation:fadeUp .6s ease forwards}
