--- a/index.html
+++ b/index.html
@@ -10,25 +10,15 @@
   <style>
     :root{--bg:#0b0b0c;--card:#111215;--muted:#bfc6cb;--accent:#ffffff;--accent-2:#c7c9cc;--glass: rgba(255,255,255,0.03)}
     *{box-sizing:border-box;font-family:'Cairo',system-ui,Arial,sans-serif}
-    html,body{height:100%;margin:0;background:linear-gradient(180deg,#070708 0%,#0b0b0c 100%);color:var(--accent);direction:rtl}
-    a{color:var(--accent);text-decoration:none}
-    .container{max-width:1100px;margin:28px auto;padding:20px}
+    html, body {
+  height: 100%;
+  margin: 0;
+  background: url('background.jpg') no-repeat center center fixed;
+  background-size: cover;
+}
 
     header{display:flex;align-items:center;justify-content:space-between;gap:16px}
     .brand{display:flex;align-items:center;gap:14px}
-    .logo{width:64px;height:64px;border-radius:12px;display:grid;place-items:center;background:linear-gradient(180deg,#1b1b1d,#2b2b2e);box-shadow:0 8px 30px rgba(0,0,0,0.6)}
-    ..logo {
-    width: 64px;
-    height: 64px;
-    border-radius: 12px;
-    overflow: hidden; /* مهم جداً */
-}
-
-.logo img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover; /* يجعل الصورة تغطي المربع بالكامل */
-}
     h1{margin:0;font-size:20px}
     p.lead{margin:0;color:var(--muted)}
 
@@ -89,9 +79,6 @@ html, body {
   <div class="container">
     <header>
       <div class="brand">
-        <div class="logo" aria-hidden>
-          <img src="logo.jpg" alt="لهيب ستور لوقو" />
-        </div>
         <div>
           <h1>لهيب ستور</h1>
           <p class="lead">خيارك الامثل لإختيار مُنتجاتك الرقمية</p>
