Update logo placeholder filename to logo.JPG

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@ body::after{content:"";position:fixed;inset:-20%;background:linear-gradient(120d
   <div class="logo-wrap">
     <img src="logo.png" id="logo" class="logo-img" 
       onerror="this.style.display='none';document.getElementById('ph').style.display='grid'">
-    <div id="ph" class="logo-placeholder" style="display:none">لوجو هنا<br><small>logo.jpg</small></div>
+    <div id="ph" class="logo-placeholder" style="display:none">لوجو هنا<br><small>logo.JPG</small></div>
   </div>
 
   <h1 class="brand-title">لهيب ستور</h1>
