--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@ body::after{content:"";position:fixed;inset:-20%;background:linear-gradient(120d
 
 <div class="wrap">
   <div class="logo-wrap">
-    <img src="logo.png" id="logo" class="logo-img" 
+    <img src="logo.JPG" id="logo" class="logo-img" 
       onerror="this.style.display='none';document.getElementById('ph').style.display='grid'">
     <div id="ph" class="logo-placeholder" style="display:none">لوجو هنا<br><small>logo.JPG</small></div>
   </div>
