--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ html,body{height:100%}
 
 body{
   font-family:"Cairo",sans-serif;
-  background:url("background.jpg") center/cover no-repeat fixed;
+  background:url("background.PNG") center/cover no-repeat fixed;
   color:var(--accent);
   display:flex;align-items:center;justify-content:center;
   text-align:center;
